<resources>
    <string name="app_name">Mini-Poll</string>


    <!-- Strings related to login and register-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="confirm_password">Confirmation du mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">L\'adresse mail est invalide</string>
    <string name="error_invalid_id">L\'identifiant est invalide</string>
    <string name="error_notmatching_password">Les mots de passe ne correspondent pas.</string>
    <string name="error_invalid_password">Le mot de passe est invalide</string>
    <string name="error_invalid_char">Certains caractères ne sont pas autorisés</string>
    <string name="error_incorrect_credential">Le mot de passe ou l\'identifiant est incorrect.</string>
    <string name="error_unknown">Erreur inconnue.</string>
    <string name="error_field_required">Tout les champs requis n\'ont pas été complété</string>
    <string name="error_no_available_friend">Aucune proposition n\'est disponible</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_id">Pseudo</string>
    <string name="no_account">Pas de compte ?</string>
    <string name="action_register">S\'inscrire</string>
    <string name="suivant">SUIVANT</string>
    <string name="annule">ANNULE</string>
    <string name="ami">Ami</string>
    <string name="pr_nom_pr_nom">Prénom: prénom</string>
    <string name="identifiant_id">Identifiant: id</string>
    <string name="adresse_mail_mail">Adresse Mail: mail</string>
    <string name="creer_un_sondage">Créer un sondage</string>
    <string name="aider_un_ami">Aider un ami</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="sondage_entre_amis">Sondage entre amis</string>
    <string name="amis">Amis</string>
    <string name="modifier_le_profil">Modifier le Profil</string>
    <string name="profil">Profil</string>
    <string name="creation_demande_aide_amis">Création d\'une demande d\'aide à un amis</string>
    <string name="creation_questionnaire">Création d\'un questionnaire</string>
    <string name="creation_sondage_accord">Creation d\'un sondage pour accord</string>
    <string name="aider_amis_choix">Aider un amis à faire un choix</string>
    <string name="nom_du_createur_a_fait_son_choix">nom_du_createur a fait son choix!</string>
    <string name="demandes_aide_clotures">Demandes d\'aide Cloturés</string>
    <string name="nom_du_createur_besoin_aide">nom_du_createur a besoin de ton aide!</string>
    <string name="demandes_aide_ouvertes">Demandes d\'aide ouvertes</string>
    <string name="demande_aide_nom_personne">Demande d\'aide à nom_de_la_personne</string>
    <string name="mes_demandes_aide">Mes demandes d\'aide</string>
    <string name="sondage_accord_entre_amis">Sondage pour un accord entre amis</string>
    <string name="mes_sondages">Mes Sondages</string>
    <string name="sondage_1">Sondage 1</string>
    <string name="sondages_ouverts">Sondages Ouverts</string>
    <string name="sondage_de_nom_createur">Sondage de nom_du_createur</string>
    <string name="sondages_clotures">Sondages Cloturés</string>
    <string name="ok">ok</string>
    <string name="ajouter_comme_amis">Ajouter comme amis</string>
    <string name="nom_name">Nom: name</string>
    <string name="prenom_prenom">Prénom: prénom</string>
    <string name="ajouter_un_amis">Ajouter un amis</string>
    <string name="consulter_la_liste_amis">Consulter la liste d\'amis</string>
    <string name="mes_questionnaires">Mes Questionnaires</string>
    <string name="questionnaire_1">Questionnaire 1</string>
    <string name="questionnaires_ouverts">Questionnaires Ouverts</string>
    <string name="questionnaire_de_nom_du_createur">Questionnaire de nom_du_createur</string>
    <string name="questionnaire_clotures">Questionnaire Cloturés</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="adresse_mail">Adresse Mail</string>
    <string name="prenom">Prénom</string>
    <string name="image">image</string>
    <string name="nom">Nom</string>
    <string name="main_image">Main Image</string>
    <string name="image_border">Image Border</string>
    <string name="error_id_already_exist">L\'identifiant utilisé existe déjà.</string>
    <string name="error_string_too_long">Certains champ sont trop long.</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="modifier_le_mot_de_passe">Modifier le mot de passe</string>
    <string name="enregistrer_les_modifications">Enregistrer les modifications</string>
    <string name="id_modify">L\'id a été modifé avec succès!</string>
    <string name="error_not_coded">Fonctionnalité non disponible pour le moment</string>
    <string name="mdp_modify">Le mot de passe a été modifé avec succès!</string>
    <string name="error_no_friend_selected">Veuillez choisir un ami</string>
    <string name="error_no_format_selected">Vous n\'avez pas choisis de format. Fin de la creation du sondage.</string>
    <string name="error_question_empty">Veuillez entrer une question.</string>
    <string name="error_no_2_reponse">Veuillez entrer au moins deux réponses.</string>
    <string name="error_not_enought_question">Pas assez de question.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
