<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="1dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@drawable/minimalbackground"
    android:weightSum="90"
    tools:context="be.lsinf1225.g16.mini_poll.activity.FriendsListActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:padding="0dp">

        <ImageButton
            android:id="@+id/list_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="list_delete"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/exit_icon"
            android:contentDescription="@string/annule" />

        <ImageButton
            android:id="@+id/list_crown_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:onClick="list_crown"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:srcCompat="@drawable/crown_icon"
            android:contentDescription="@string/ok" />

        <TextView
            android:id="@+id/list_ami_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/list_crown_btn"

            android:layout_toStartOf="@+id/list_delete_btn"

            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/ami"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:typeface="normal" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/list_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/default_profile_picture"
        android:contentDescription="@string/profil" />

    <TextView
        android:id="@+id/list_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/textview_border"
        android:text="@string/nom_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/list_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/textview_border"
        android:text="@string/identifiant_id"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/list_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/textview_border"
        android:text="@string/adresse_mail"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:padding="0dp">


        <ImageButton
            android:id="@+id/list_next_btn"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="0dp"
            android:layout_weight="50"
            android:contentDescription="@string/annule"
            android:onClick="list_next"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/left_arrow" />

        <ImageButton
            android:id="@+id/list_previous_btn"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="list_previous"
            android:contentDescription="@string/annule"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/right_arrow" />


    </LinearLayout>

</LinearLayout>
