<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:layout_marginBottom="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/app_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:weightSum="70"
    tools:context="be.lsinf1225.g16.mini_poll.activity.MenuMainActivity">

    <!-- Login progress -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1971c2"
            android:contentDescription="@string/profil"
            android:onClick="profile"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/profile_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/profil"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        >

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="#1c7ed6"
            android:contentDescription="@string/modifier_le_profil"
            android:cropToPadding="false"
            android:onClick="profileedit"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/edit_profile_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/modifier_le_profil"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1971c2"
            android:contentDescription="@string/amis"
            android:onClick="friends"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/friends_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/amis"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1c7ed6"
            android:contentDescription="@string/sondage_entre_amis"
            android:onClick="menu_agreement"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/survey_agreement_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/sondage_entre_amis"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1971c2"
            android:contentDescription="@string/questionnaire"
            android:onClick="menu_question"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/survey_question_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/questionnaire"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1c7ed6"
            android:contentDescription="@string/aider_un_ami"
            android:onClick="menu_choice"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/survey_choice_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/aider_un_ami"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1971c2"
            android:contentDescription="@string/creer_un_sondage"
            android:onClick="menu_survey_creation"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:tint="#ffffffff"
            app:srcCompat="@drawable/survey_creation_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/creer_un_sondage"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffffff"></TextView>
    </FrameLayout>
</LinearLayout>
